--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   permission_handler: ^11.0.1
   shimmer: ^3.0.0
   file_picker: ^6.1.1
+  syncfusion_flutter_charts: ^20.4.44
   # firebase_core: ^1.24.0
   # uni_links: ^0.5.1
 
