--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   file_picker: ^6.1.1
   syncfusion_flutter_charts: ^20.4.44
   expandable: ^5.0.1
+  platform_device_id: ^1.0.1
 
   # firebase_core: ^1.24.0
   # uni_links: ^0.5.1
