--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   responsive_framework: ^0.2.0
   flutter_html: any
   webview_flutter: ^4.4.2
-  flutter_native_splash: ^2.3.4
+  flutter_native_splash: ^2.3.7
   # firebase_messaging: ^11.2.0
   # firebase_core: any
 
@@ -69,7 +69,9 @@ dependencies:
   file_picker: ^6.1.1
   syncfusion_flutter_charts: ^20.4.44
   expandable: ^5.0.1
-  platform_device_id: ^1.0.1
+  device_info_plus: ^9.1.2
+  local_auth: ^2.1.8
+  # platform_device_id: ^1.0.1
 
   # firebase_core: ^1.24.0
   # uni_links: ^0.5.1
@@ -87,6 +89,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  husky: ^0.1.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
