--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   expandable: ^5.0.1
   device_info_plus: ^9.1.2
   local_auth: ^2.1.8
+  number_to_words_english: ^2.0.2
   # platform_device_id: ^1.0.1
 
   # firebase_core: ^1.24.0
